--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   ],
   "author": "bitspent",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bitspent/cryptopath.git"
+  },
   "dependencies": {
     "bn.js": "^5.2.0",
     "bs58": "^4.0.1",
